tests/syntax_errors/test_unwanted.ice
algorithm 1error1(input uint1 b)
{
  
}
